# CE-DPS

./: .gitignore  CE-DPS-Issues-Fixed-Report.md  CE-DPS-Testing-Report.md  CE-DPS_methodology_featureset.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  cedps_mcp_architecture_analysis.md  cedps_mcp_idea.md  fortitude_state_analysis.md  issues_to_fix.md
fortitude/: AI_RULES.md  CE-DPS-CONFIG.md  CLAUDE.md  Cargo.toml  DEVELOPMENT_PROCESS.md  GETTING_STARTED.md  README.md  claude_code_provider_test.rs  demo_claude_code_provider.rs  simple_claude_code_test.rs  stress_test_cache_performance.rs
fortitude/benches/: manual_lookup_time_validation.rs  performance_validation.rs  quality_control_performance_benchmarks.rs  quality_metrics_performance.rs  quality_optimization_performance.rs  quality_scoring_benchmarks.rs  sprint_008_performance_validation.rs  sprint_008_task_6_5_workflow_efficiency_validation.rs  workflow_efficiency_validation.rs
fortitude/crates/fortitude-api-server/: Cargo.toml  openapi.yaml
fortitude/crates/fortitude-cli/: Cargo.toml
fortitude/crates/fortitude-core/: Cargo.toml
fortitude/crates/fortitude-mcp-server/: AUTHENTICATION.md  CONFIG.md  Cargo.toml  README.md
fortitude/crates/fortitude-test-utils/: Cargo.toml
fortitude/crates/fortitude-types/: Cargo.toml
fortitude/docs/: advanced-classification-guide.md  fortitude-domain-principles.md  fortitude-state-analysis_LLM-readable.md  fortitude-technical-integration-model.md  fortitude-vision-statement.md  performance-benchmarks.md  phase-4-cleanup-summary.md
fortitude/docs/api-reference/: multi-llm-endpoints.md
fortitude/docs/architecture/: learning-system-design.md  monitoring-architecture.md  multi-llm-architecture.md  proactive-research-architecture.md  quality-control-design.md  system-design.md
fortitude/docs/deployment/: enterprise-deployment.md
fortitude/docs/ideas/: project_brainstorming.md  prompts_scratchpad.md  prototype_lessons_learned.md
fortitude/docs/performance/: tuning-guide.md
fortitude/docs/phases/: phase-3-completion-report.md
fortitude/docs/planning/: known_technical_debt.md  master-roadmap.md
fortitude/docs/reference_library/: INDEX.md  README.md  domain-principles.md
fortitude/docs/research/: research_needed[DO NOT INGEST INTO REFERENCE LIBRARY].md
fortitude/docs/security/: compliance-guide.md
fortitude/docs/user-guides/: deployment-and-integration-guide.md  learning-and-monitoring-configuration.md  multi-llm-setup.md  proactive-research-api.md  proactive-research-cli.md  proactive-research-configuration.md  proactive-research-getting-started.md  proactive-research-mcp.md  proactive-research-troubleshooting.md  proactive-research-workflows.md
fortitude/examples/: comprehensive_error_handling_demo.rs  configurable_gap_analysis_demo.rs  context_aware_prioritization_demo.rs  enhanced_state_management_demo.rs  gap_analysis_demo.rs  impact_assessment_demo.rs  learning_system_demo.rs  multi_provider_research_demo.rs  prioritization_demo.rs  quality_metrics_integration_demo.rs  quality_optimization_demo.rs  research_scheduler_demo.rs  semantic_gap_analysis_demo.rs  task_executor_demo.rs  task_queue_demo.rs  user_preferences_demo.rs
fortitude/examples/research-implementations/: Advanced Learning Algorithm Implementation.rs  Classification Algorithms and Keyword Matching.rs  Distributed AI System Observability.rs  Dynamic Threshold Adjustment.rs  Enterprise-Scale Multi-LLM Load.rs  Observability System Implementation.rs  Quality Evaluation System Implementation.rs  README.md  Rule Composition Algorithms.rs  Semantic Analysis Integration.rs  claude-api-implementation-patterns-2025-07-09.rs  research-template-system-implementation-2025-07-09.rs
fortitude/methodology/: parallel_subtask_rules.md
fortitude/src/: knowledge.rs  lib.rs  main.rs  pipeline.rs  research.rs  research_engine_adapter.rs
fortitude/src/learning/: adaptation.rs  config.rs  mod.rs  monitoring.rs  optimization.rs  pattern_recognition.rs  storage.rs  template_integration.rs
fortitude/src/monitoring/: alerts.rs  config.rs  health.rs  metrics.rs  mod.rs  tracing.rs
fortitude/src/proactive/: background_scheduler.rs  comprehensive_config.rs  config.rs  configurable_analyzer.rs  context_aware_scorer.rs  error_handler.rs  file_monitor.rs  gap_analyzer.rs  impact_assessor.rs  integrated_analyzer.rs  manager.rs  mod.rs  notification_delivery_verifier.rs  notification_system.rs  (+9 more)
fortitude/tests/: README.md  anchor_classification_tests.rs  anchor_cli_proactive_tests.rs  anchor_cross_interface_integration.rs  anchor_fallback_strategy_comprehensive_tests.rs  anchor_gap_analysis_tests.rs  anchor_gap_analysis_tests_minimal.rs  anchor_gemini_provider_tests.rs  anchor_learning_configuration_tests.rs  anchor_learning_vector_persistence_tests.rs  anchor_monitoring_tests.rs  anchor_notification_delivery_verification_tests.rs  anchor_notification_preferences_tests.rs  anchor_notification_system_tests.rs  anchor_performance_monitoring_tests.rs  anchor_prioritization_tests.rs  anchor_proactive_config_tests.rs  anchor_progress_tracking_tests.rs  anchor_prompt_optimization_tests.rs  anchor_provider_research_engine_integration.rs  anchor_quality_control_tests.rs  anchor_research_completion_notifications_tests.rs  anchor_sprint_009_api_integration_workflows.rs  anchor_sprint_009_configuration_validation_workflows.rs  anchor_sprint_009_cross_component_integration.rs  anchor_sprint_009_data_persistence_workflows.rs  anchor_sprint_009_error_handling_system_recovery.rs  anchor_sprint_009_learning_system_workflows.rs  anchor_sprint_009_mcp_integration_workflows.rs  anchor_sprint_009_monitoring_system_workflows.rs  anchor_test_coverage_analysis.md  anchor_test_maintenance_guidelines.md  background_scheduler_tests.rs  cli_proactive_tests.rs  cli_research_pipeline_integration.rs  error_handling_comprehensive_tests.rs  feedback_integration_tests.rs  file_monitor_tests.rs  fixture_usage_tests.rs  gap_analyzer_integration_tests.rs  (+37 more)
tools/fortitude-integration/: Cargo.toml
tools/quality-gates/: Cargo.toml
(+366 files in other folders)
