[package]
name = "fortitude-core"
version = "0.1.0"
edition = "2021"
description = "Core business logic for the Fortitude research system"
authors = ["Concordia Team"]

[dependencies]
fortitude-types = { path = "../fortitude-types" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true }
reqwest = { version = "0.12", features = ["json", "stream"] }
url = "2.4"
backoff = { version = "0.4", features = ["tokio"] }
dashmap = "5.5"
qdrant-client = { workspace = true }
num_cpus = "1.0"
md5 = "0.7"
rand = { workspace = true }

# Embedding generation (mock implementation - uncomment for production)
# candle-core = { workspace = true }
# candle-nn = { workspace = true }
# candle-transformers = { workspace = true }
# tokenizers = { workspace = true }
# hf-hub = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
proptest = { workspace = true }
mockall = { workspace = true }
tracing-subscriber = { workspace = true }
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
rand.workspace = true

[[example]]
name = "hybrid_search_demo"
required-features = []

[[example]]
name = "performance_optimization_demo"
required-features = []

[[bench]]
name = "vector_performance"
harness = false

[[bench]]
name = "embedding_performance" 
harness = false

[[bench]]
name = "search_performance"
harness = false

[[bench]]
name = "storage_performance"
harness = false
