[package]
name = "fortitude-types"
version = "0.1.0"
edition = "2021"
description = "Shared types and errors for the Fortitude research system"
authors = ["Concordia Team"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }